# doit-django-project

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  test.txt
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_created_at.py  0003_post_updated_at_alter_post_created_at.py  0004_post_head_image.py
blog/templates/blog/: base.html  index.html  navbar.html  post_detail.html  post_list.html  single_post_page.html
doit_django_prj/: asgi.py  settings.py  urls.py  wsgi.py
single_pages/: urls.py  views.py
single_pages/templates/single_pages/: about_me.html  landing.html
